# damai-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: ci.yml.example  tools.md  troubleshooting.md
examples/: grab_one_ticket.py  mcp_client_demo.py  multi_devices.py  probe_selectors.py
src/damai_mcp/: __init__.py  __main__.py  server.py
src/damai_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/damai_mcp/actions/: __init__.py  actions.py
src/damai_mcp/damai/: __init__.py  actions.py  selectors.py
src/damai_mcp/device/: __init__.py  adb.py  manager.py
src/damai_mcp/inspector/: __init__.py  dump.py  find.py  models.py
src/damai_mcp/utils/: __init__.py  errors.py  logging.py  retry.py
tests/: conftest.py  test_actions.py  test_adb.py  test_damai.py  test_models.py  test_retry.py  test_server.py
